--- a/docs/metodas/medis.tex
+++ b/docs/metodas/medis.tex
@@ -1,19 +1,26 @@
-C4.5 sprendimų medis yra sprendimų medžio tipo klasifikatorius kurio formavimui naudojamas C4.5 algoritmas. Sprendimų medis yra programa, suformuota iš tam tikrų testų, kurie tikrina nagrinėjamo objekto parametrus, ir pagal juos parenkama tam tikra klasė.
+C4.5 sprendimų medis yra sprendimų medžio tipo klasifikatorius kurio formavimui naudojamas C4.5 algoritmas.
+Sprendimų medis yra programa, suformuota iš tam tikrų testų, kurie tikrina nagrinėjamo objekto parametrus,
+ir pagal juos parenkama tam tikra klasė.
 
 \ktufigure{images/sprendimu_medis.png}{8 cm}{Pavyzdinis sprendimų medis}
 
-Pavyzdinis sprendimų medis klasifikuojantis vektorių $X$ į klases $Y = (y_1, y_2, y_3)$ pateikiamas \ktufigref{images/sprendimu_medis.png} paveiksle. Jį sudaro testų rinkinys $T$.
+Pavyzdinis sprendimų medis klasifikuojantis vektorių $X$ į klases $Y = (y_1, y_2, y_3)$ pateikiamas
+ \ktufigref{images/sprendimu_medis.png} paveiksle. Jį sudaro testų rinkinys $T$.
 
-Sprendimų medį sudarantys testai yra formuojami modelio apmokymo metu. Mokymui naudojamas duomenų rinkinys $H$ kurį sudaro mokymosi duomenys su jiems priskirtimos klasėmis. Medžio formavimo metu parenkami testai kurie maksimizuoja funkciją:
+Sprendimų medį sudarantys testai yra formuojami modelio apmokymo metu. Mokymui naudojamas duomenų
+rinkinys $H$ kurį sudaro mokymosi duomenys su jiems priskirtimos klasėmis. Medžio formavimo metu
+parenkami testai kurie maksimizuoja funkciją:
 \begin{equation} \label{eq:gainratio}
     santykinisIšlošis(t_i) = \frac{išlošis(t_i)}{santykinėEntropija(t_i)}
 \end{equation}
-Santykinis išlošis priklauso nuo informacijos išlošio, kuris būtų maksimizuojamas naudojant ID3 algoritmą bei santykinės entropijos. Santykinė entropija naudojama siekiant sumažinti informacijos išlošio iškreipimą kai testas skaido rinkinį į daug skirtingų klasių \cite{c45}
-
+Santykinis išlošis priklauso nuo informacijos išlošio, kuris būtų maksimizuojamas naudojant ID3
+algoritmą bei santykinės entropijos. Santykinė entropija naudojama siekiant sumažinti informacijos
+išlošio iškreipimą kai testas skaido rinkinį į daug skirtingų klasių \cite{c45}
 \begin{equation}
     išlošis(t_i) = entropija(H) - entropija_{t_i}(H)
 \end{equation}
-informacijos išlošis vertina duomenų rinkinio klasių atsiskyrimą - skaičiuojama kiek informacijos suteikia padalinimas naudojant nagrinėjamą testą
+informacijos išlošis vertina duomenų rinkinio klasių atsiskyrimą - skaičiuojama kiek informacijos
+suteikia padalinimas naudojant nagrinėjamą testą
 
 \begin{equation}
     entropija_{t_i} = \sum_{j=1}^{n} \frac{|H_i|}{H} \times entropija(H_i)
@@ -28,11 +35,21 @@ informacijos išlošis vertina duomenų rinkinio klasių atsiskyrimą - skaičiu
 \end{equation}
 
 kur $freq(C_j, S)$ žymi klasės $C_j$ pasikartojimo kiekį rinkinyje $S$.
-Aptikus testą kuris maksimizuoja santykinį išlošį \ref{eq:gainratio} testas yra įtraukiamas į medį. Mokymo duomenų rinkinys $H$ yra skaidomas pagal testą į kelis rinkinius\cite{c45}. Šie duomenų rinkiniai priskiriami medžio šakoms atitinkančioms testo rezultatus ir rekursiškai tęsiamas medžio formavimas.
-C4.5 medžio formavimo algoritmas palaiko diskrečių reikšmių parametrus bei tolygius kintamuosius. Testai vykdomi diskretiems parametrams sukuria po vieną šaką kiekvienai galimai parametro reikšmei.
+Aptikus testą kuris maksimizuoja santykinį išlošį \ref{eq:gainratio} testas yra įtraukiamas į medį.
+Mokymo duomenų rinkinys $H$ yra skaidomas pagal testą į kelis rinkinius\cite{c45}. Šie duomenų
+rinkiniai priskiriami medžio šakoms atitinkančioms testo rezultatus ir rekursiškai tęsiamas medžio formavimas.
 
- Testai tolydiems parametrams vykdomi parenkant ribinę vertę $Z$, su kuria bus lyginama parametro $A$ vertė \cite{c45}. Kadangi apmokymui naudojamas baigtinis duomenų rinkinys, jame yra baigtinis kiekis galimų tolydaus parametro $A$ reikšmių $\{v_1, v_2, ..., v_m\}$. Ribinei vertei $Z$ priskiriama viena iš egzistuojančių parametro $A$ verčių  $v_i$. Parenkama vertė kuri maksimizuoja santykinį išlošį \ref{eq:gainratio}.
+C4.5 medžio formavimo algoritmas palaiko diskrečių reikšmių parametrus bei tolygius kintamuosius.
+Testai vykdomi diskretiems parametrams sukuria po vieną šaką kiekvienai galimai parametro reikšmei.
 
-Suformavus medį vykdomas medžio mažinimas. Dalis šakų yra sukeliančios persimokymą - tai yra jos yra per daug pritaikytos mokymo imčiai \cite{c45}. Šios šakos yra aptinkamos skaičiuojant tikėtiną klaidų dažnį medžiui be tam tikro testo ir su potencialiai pertekliniu testu.
+Testai tolydiems parametrams vykdomi parenkant ribinę vertę $Z$, su kuria bus lyginama parametro
+$A$ vertė \cite{c45}. Kadangi apmokymui naudojamas baigtinis duomenų rinkinys, jame yra baigtinis
+kiekis galimų tolydaus parametro $A$ reikšmių $\{v_1, v_2, ..., v_m\}$. Ribinei vertei $Z$ priskiriama
+viena iš egzistuojančių parametro $A$ verčių  $v_i$. Parenkama vertė kuri maksimizuoja
+santykinį išlošį \ref{eq:gainratio}.
+
+Suformavus medį vykdomas medžio mažinimas. Dalis šakų yra sukeliančios persimokymą - tai yra
+jos yra per daug pritaikytos mokymo imčiai \cite{c45}. Šios šakos yra aptinkamos skaičiuojant
+tikėtiną klaidų dažnį medžiui be tam tikro testo ir su potencialiai pertekliniu testu.
 
 Šis metodas neturi hiperparametrų kuriuos būtų galima derinti.
