--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -61,11 +61,21 @@
 
 \ktuchapter{Įžanga}
 
-Šiuolaikinės technologijos lemia spartų interneto tinklapių atsiradimą. Tinklalapiai kuriami siekiant gauti kokią nors naudą. Tačiau dalis jų yra kuriama tikintis pasipelnyti naudotojams kenksmingais būdais, tai yra infekuojant jų kompiuterius, vagiant asmens duomenis. Tokie tinklalapiai yra kenksmingi ir juos atpažinti yra svarbu, taip apsaugant naudotojus.
+Šiuolaikinės technologijos lemia spartų interneto tinklapių atsiradimą. Tinklalapiai kuriami siekiant gauti
+kokią nors naudą. Tačiau dalis jų yra kuriama tikintis pasipelnyti naudotojams kenksmingais būdais, tai yra
+infekuojant jų kompiuterius, vagiant asmens duomenis. Tokie tinklalapiai yra kenksmingi ir juos atpažinti yra
+svarbu, taip apsaugant naudotojus.
 
-Darbo tikslas - pasiūlyti ir įgyvendinti metodiką tinklalapių klasifikavimui į kenksmingus bei nekenksmingus pasinaudojant jų adresu bei svetainių grafo suteikiama informacija. Tai leidžia tiksliau klasifikuoti kenksmingus tinklalapius remiantis prielaida, kad kenksmingi tinklalapiai svetainių grafe yra susiję, tai yra kenksmingi tinklalapiai turi nuorodas į kenksmingus tinklalapius, nekenksmingi tinklalapiai turi daugiau nuorodų į nekenksmingus tinklalapius.
+Darbo tikslas - pasiūlyti ir įgyvendinti metodiką tinklalapių klasifikavimui į kenksmingus bei nekenksmingus
+pasinaudojant jų adresu bei svetainių grafo suteikiama informacija. Tai leidžia tiksliau klasifikuoti kenksmingus
+tinklalapius remiantis prielaida, kad kenksmingi tinklalapiai svetainių grafe yra susiję, tai yra kenksmingi
+tinklalapiai turi nuorodas į kenksmingus tinklalapius, nekenksmingi tinklalapiai turi daugiau nuorodų į nekenksmingus
+tinklalapius.
 
-Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinklalapių tyrinėjimo literatūros apžvalga. Antroje dalyje pateikiama metodika kenksmingų ir nekenksmingų tinklalapių klasifikavimui, suformuojant mašininio mokymo modelius. Trečiojoje dalyje yra aprašomas ir apmokomas modelis, pateikiama programinė įranga šio modelio praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas praktinis įrankio panaudojimas.
+Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinklalapių tyrinėjimo literatūros apžvalga.
+Antroje dalyje pateikiama metodika kenksmingų ir nekenksmingų tinklalapių klasifikavimui, suformuojant mašininio
+mokymo modelius. Trečiojoje dalyje yra aprašomas ir apmokomas modelis, pateikiama programinė įranga šio modelio
+praktiniam panaudojimui. Taip pat trečioje dalyje kritiškai įvertinamas praktinis įrankio panaudojimas.
 
 \newpage
 
@@ -97,10 +107,13 @@ Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinkla
 \ktuchapter{Išvados}
 
 \begin{enumerate}[label=\arabic*.]
-\item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank įverčius topologinei svetainių grafo informacijai panaudoti sąvybių vektoriaus formavime
+\item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank
+ įverčius topologinei svetainių grafo informacijai panaudoti sąvybių vektoriaus formavime
 \item Sukurta metodika kenksmingų tinklalapių klasifikavimui
-\item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas programinis įrankis praktiniam modelio panaudojimui
-\item Sukurtas įrankis naudotas su realiu duomenų rininiu, įvertinti įrankio trūkumai: lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
+\item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas
+ programinis įrankis praktiniam modelio panaudojimui
+\item Sukurtas įrankis naudotas su realiu duomenų rininiu, įvertinti įrankio trūkumai:
+lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
 \end{enumerate}
 
 \newpage
