--- a/docs/taikymas/bandymas.tex
+++ b/docs/taikymas/bandymas.tex
@@ -1,6 +1,7 @@
 \ktusection{Praktinis įrankio taikymas}
 
-Sukurtas įrankis bandytas panaudoti naudojant kelias nepavojingas interneto svetaines. Dalis iš bandytų tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
+Sukurtas įrankis bandytas panaudoti naudojant kelias nepavojingas interneto svetaines. Dalis iš bandytų
+tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
 
 \begin{ktutable}{bandymas}{Įrankio bandymo rezultatai}
     \begin{tabular}{|p{5 cm}|p{5 cm}|r|}
@@ -16,8 +17,17 @@ Sukurtas įrankis bandytas panaudoti naudojant kelias nepavojingas interneto sve
     \end{tabular}
 \end{ktutable}
 
-Toks įrankio bandymas parodo vieną iš jo trūkumų. Tokie tinkallapiai kaip Google, 15min tikrai nėra kenksmingi, tačiau jie klasifikuojami netiesingai. Tą galima taisyti iš nauojo formuojant duomenų rinkinį mokymui, įtraukiant šiuos tinklalapius. Tačiau tai iškreipia mokymo metodiką.
+Toks įrankio bandymas parodo vieną iš jo trūkumų. Tokie tinkallapiai kaip Google, 15min tikrai nėra kenksmingi,
+tačiau jie klasifikuojami netiesingai. Tą galima taisyti iš nauojo formuojant duomenų rinkinį mokymui,
+įtraukiant šiuos tinklalapius. Tačiau tai iškreipia mokymo metodiką.
 
-Šioje vietoje matomas pagrindinis įprasto juodojo sąrašo privalumas. Jo klasifikavimo modelio modifikavimas yra paprastas - užtenk atiesiog įterpti įrašą į duomenų bazę ir modelis yra atnaujintas. Taip pat visada yra aišku kodėl tinklalapis laikomas klaidingu, paprasta suprasti ką reikia keisti. Naudojant mašininio mokymo modelį tai gali būti atliekama peržiūrint modelio svorius, tačiau juos galima modifikuoti tik vykdant visą mokymo procesą iš naujo.
+Šioje vietoje matomas pagrindinis įprasto juodojo sąrašo privalumas. Jo klasifikavimo modelio modifikavimas yra
+paprastas - užtenk atiesiog įterpti įrašą į duomenų bazę ir modelis yra atnaujintas. Taip pat visada yra aišku
+kodėl tinklalapis laikomas klaidingu, paprasta suprasti ką reikia keisti. Naudojant mašininio mokymo modelį tai
+gali būti atliekama peržiūrint modelio svorius, tačiau juos galima modifikuoti tik vykdant visą mokymo procesą iš naujo.
 
-Nors suformuotas modelis rodo tikrai gerus rezultatus su validavimo imtimis, tačiau praktinis panaudojimas nėra įmanomas. Tinklalapiai kurie klasifikuojami kaip blogi ar geri negali būti lengvai pakeisti esant blogam modelio klasifkavimui. Taip pat neina paaiškinti kodėl jie klasifikuojami kaip geri ar blogi. Tai gali būti keičiama įtraukiant papildomus matmenis į modelį - į juos turi įeiti turinio sąvybės bei tinklalapį talpinančio serverio informacija, topografinė struktūra.
+Nors suformuotas modelis rodo tikrai gerus rezultatus su validavimo imtimis, tačiau praktinis panaudojimas nėra
+įmanomas. Tinklalapiai kurie klasifikuojami kaip blogi ar geri negali būti lengvai pakeisti esant blogam modelio
+klasifkavimui. Taip pat neina paaiškinti kodėl jie klasifikuojami kaip geri ar blogi. Tai gali būti keičiama
+įtraukiant papildomus matmenis į modelį - į juos turi įeiti turinio sąvybės bei tinklalapį talpinančio serverio
+informacija, topografinė struktūra.
