--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -1,6 +1,9 @@
 \ktusection{Modelio naudojimas įrankio kūrimui}
 
-Apmokytas modelis yra paruoštas naudojimui, tačiau jis nėra itin patogus. Naudojamos programinės įrangos modelis gali būt ipanaudojamas per komandinės eilutės sąsają, pateikiant duomenis mokymo metu naudotu formatu. Modelio grąžinamas rezultatas taip pat nėra lengvai suvokiamas. Dėl to yra kuriama taikomoji aplikacija kuri supaprastina modelio panaudojimą realiose, praktinėse situacijose.
+Apmokytas modelis yra paruoštas naudojimui, tačiau jis nėra itin patogus. Naudojamos programinės įrangos modelis gali
+būti panaudojamas per komandinės eilutės sąsają, pateikiant duomenis mokymo metu naudotu formatu. Modelio grąžinamas
+rezultatas taip pat nėra lengvai suvokiamas. Dėl to yra kuriama taikomoji aplikacija kuri supaprastina modelio
+panaudojimą realiose, praktinėse situacijose.
 
 Kuriama sistema vadinama toliau vadinama \textbf{klasifikavimo aplikacija}.
 
@@ -12,7 +15,9 @@ Kuriama sistema vadinama toliau vadinama \textbf{klasifikavimo aplikacija}.
     \end{tabular}
 \end{ktutable}
 
-Aplikacija pritaikyta naudoti http protokolu, naudojama REST architektūra. Sąsaja pateikta \vref{tab:sasaja} lentelėje. Tinklalpio kurį norima klasifikuoti adresas yra pateikiamas klasifikavimo aplikacijai, grąžinamas rezultatas yra klasifikavimo modelio pateiktas įvertis.
+Aplikacija pritaikyta naudoti http protokolu, naudojama REST architektūra. Sąsaja pateikta \vref{tab:sasaja}
+lentelėje. Tinklalpio kurį norima klasifikuoti adresas yra pateikiamas klasifikavimo aplikacijai, grąžinamas
+rezultatas yra klasifikavimo modelio pateiktas įvertis.
 
 Klasifikavimo aplikacijos architektūra pateikiama paveiksle \ktufigref{images/architektura.png}
 
@@ -23,11 +28,18 @@ Klasifikavimo aplikacija susideda iš dviejų pagrindinių komponentų:
 \item sąsaja
 \item branduolys
 \end{enumerate}
-Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui, branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinklamu formatu. Programinio įrankio išeities kodas pateikiamas prieduose \vref{priedas:frontend}.
+Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju
+tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui,
+branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinklamu formatu. Programinio
+įrankio išeities kodas pateikiamas prieduose \vref{priedas:frontend}.
 
-Branduolio komponente vykdomas modelio pritaikymas. Jį sudaro klasė \texttt{ClassifierController} bei duomenų saugyklos kenksmingų ir nekenksmingų svetainių PageRank įverčiams.
+Branduolio komponente vykdomas modelio pritaikymas. Jį sudaro klasė \texttt{ClassifierController} bei duomenų
+saugyklos kenksmingų ir nekenksmingų svetainių PageRank įverčiams.
 
-Komponentų atskyrimas yra viena iš gerų praktikų kuriant sistemas. Atskiriant branduolio elementą kuriame yra vykdoma verslo logika, matematiniai skaičiavimai sistema yra paruošiama greitam plėtimui, lengvam migravimui tarp palaikomų ir naudojamų vartotojo sąsajos protokolų. Šiuo atveju vartotojo sąsaja nepriklauso nuo branduolio, tik nuo klasės \texttt{ClassifierController} implementacijos.
+Komponentų atskyrimas yra viena iš gerų praktikų kuriant sistemas. Atskiriant branduolio elementą kuriame yra
+vykdoma verslo logika, matematiniai skaičiavimai sistema yra paruošiama greitam plėtimui, lengvam migravimui
+tarp palaikomų ir naudojamų vartotojo sąsajos protokolų. Šiuo atveju vartotojo sąsaja nepriklauso nuo
+branduolio, tik nuo klasės \texttt{ClassifierController} implementacijos.
 
 Lyginant su alternatyvia sistema \cite{gapi} yra matomi klasifikavimo aplikacijos privalumai:
  \begin{enumerate}
@@ -36,4 +48,8 @@ Lyginant su alternatyvia sistema \cite{gapi} yra matomi klasifikavimo aplikacijo
     \item nereikalauja interneto prieigos.
  \end{enumerate}
 
-Pirminė programos versija yra kurta siekiant įrodyti jos veikimo koncepciją. Dėl to kai kurios sistemos vietos yra optimizuotos programavimo laiko minimizavimo atžvilgiu. Plėtojant programinę įrangą v ertėtų aplikaciją skaidyti į kelis atskirtus komponentus, pagal naudojamų resursų tipą. PageRank įverčiai turi būti iškeliami į duomenų bazę, mašininio mokymo modelis iškeliamas į atskirą vykdomąją aplikaciją kuri gali būti plečiamas esant reikalui ar skaičiavimo resursų trūkumui.
+Pirminė programos versija yra kurta siekiant įrodyti jos veikimo koncepciją. Dėl to kai kurios sistemos vietos
+yra optimizuotos programavimo laiko minimizavimo atžvilgiu. Plėtojant programinę įrangą v ertėtų aplikaciją
+skaidyti į kelis atskirtus komponentus, pagal naudojamų resursų tipą. PageRank įverčiai turi būti iškeliami
+į duomenų bazę, mašininio mokymo modelis iškeliamas į atskirą vykdomąją aplikaciją kuri gali būti plečiamas
+esant reikalui ar skaičiavimo resursų trūkumui.
